# excelTemplateParser

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  README.zh-TW.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: dependencies.py  errors.py  logging_config.py  main.py  schemas.py  settings.py
backend/app/api/: configs.py  jobs.py  templates.py
backend/app/core/: exceptions.py  joiner.py  mapper.py  parser.py  preflight.py  preview.py  writer.py  zipper.py
backend/app/middleware/: request_id.py  upload_limit.py
backend/app/services/: cleanup_service.py  config_service.py  job_service.py  recovery_service.py  scheduler.py
backend/app/workers/: queue.py  run.py  tasks.py
backend/tests/: conftest.py  test_api_configs.py  test_api_configs_preview.py  test_api_jobs.py  test_api_templates.py  test_cleanup_service.py  test_config_service.py  test_exceptions.py  test_job_service.py  test_joiner.py  test_mapper.py  test_parser.py  test_preflight.py  test_recovery_service.py  test_schemas.py  test_worker_pipeline.py  test_writer.py  test_zipper.py
docs/: case_study.md  decisions_log.md  learnings.md  plan.md
docs/spec/: design.md  proposal.md  spec.md  tasks.md
examples/: README.md
examples/01_product_pricing/: README.md  config.json  expected_output.xlsx  (+2 more)
frontend/: .dockerignore  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
scripts/: VERIFICATION_REPORT.md  resume_test.py  smoke_test.py  up.sh
(+61 files in other folders)
