[project]
name = "excel-template-parser"
version = "0.1.0"
description = "ERP Excel batch conversion tool"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "redis>=5.0",
    "rq>=1.16",
    "structlog>=24.1",
    "apscheduler>=3.10",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "fakeredis>=2.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
